# real-chat-FastAPI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d3b8aade0ce0_initial_schema.py
app/: config.py  dependencies.py  main.py
app/api/: auth.py  conversations.py  router.py  websocket.py
app/core/: security.py
app/db/: base.py  session.py
app/models/: __init__.py  conversation.py  message.py  user.py
app/repositories/: conversation.py  message.py  user.py
app/schemas/: auth.py  conversation.py  websocket.py
app/services/: ai_mock.py  auth.py  conversation.py  messaging.py  redis_pubsub.py
